--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,9 +14,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
+    <script src="https://mo4koma.iranika.info/4komaData.js"></script>
+    <script src="https://iranika.github.io/mo-yoyaku/goyoyaku.js"></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
     <div id="q-app"></div>
+    <!-- DLsite Blog parts -->
+    <script type="text/javascript">blogparts={"id":"8585","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
   </body>
 </html>
